--- a/.github/workflows/gen-tiles.yml
+++ b/.github/workflows/gen-tiles.yml
@@ -87,6 +87,7 @@ jobs:
           port: 22
           script: chown -R 1000:1000 ${{ github.event.inputs.sshTarget }}
       - name: Upload mbtiles file as artifact
+        if: ${{ github.event.inputs.useSSH && github.event.inputs.useSSH == 'false' }}
         uses: actions/upload-artifact@v3
         with:
           name: ${{ github.event.inputs.name }}.mbtiles
